2003-04-29  Jeffrey Stedfast  <fejj@ximian.com>

	* importers/netscape-importer.c
	(netscape_add_priority_workaround_filters): Updated for API change
	in the filter code.

2003-04-29  Not Zed  <NotZed@Ximian.com>

	** See bug #41972

	* message-list.c (ml_tree_value_at): fix (void *) casts on trinary
	ops.

	* folder-browser.c (on_right_click): Store the label tag in the
	label callback data, not the translated name.

	* mail-config.c (label_defaults[]): Initialise with the tag
	values.
	(config_clear_labels): free tag field.
	(config_cache_labels): setup the tag field based on the position
	of the label name.
	(mail_config_get_label_color_by_name): Lookup colour by the
	untranslated TAG, not the translated/customisable tag.

	* mail-config.h (MailConfigLabel): Add a tag field, we were using
	the translated name as the label(!).

2003-04-29  Dan Winship  <danw@ximian.com>

	* mail-format.c (write_xmailer_header): Remove preceding whitespace

2003-04-28  Ettore Perazzoli  <ettore@ximian.com>

	* mail-session.c (mail_session_forget_passwords): Forget all
	passwords again.  [#41817]

2003-04-25  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-config.glade: Made toplevel container widgets set a
	border-width (including toplevel widgets within frames), set the
	table/hbox/vbox spacings, set the spacing between an image and the
	description text in hboxes to 12pts (as suggested by the HIG),
	Changed Add/Delete buttons to the stock Add/Remove buttons, etc

2003-04-24  Jeffrey Stedfast  <fejj@ximian.com>

	Fix for bug #41789

	* mail-config.c (mail_config_init): Cache the allowable
	mime-types.
	(mail_config_get_allowable_mime_types): New public function to get
	an array of allowable mime-types.

	* mail-format.c (mail_lookup_handler): Only allow a
	bonobo-component handler if the mime-type is something handled by
	evolution or the user has specifically chosen that type as
	available for viewing with a bonobo component in the gconf
	database.